datasets/dataset_txt/requests/requests_1678.txt
Contributor
maxcountryman commented on Aug 6, 2014
>>> import requests
>>> requests.codes.continue
  File "<stdin>", line 1
    requests.codes.continue
                          ^
SyntaxError: invalid syntax
We expect to see the Informational HTTP status code, 100, but instead an error is raised. requests.codes['continue'] works as a workaround. Presumably this happens because continue is a keyword in Python and therefore cannot be used as an attribute name. Python 2.7.6, OS X 10.10.